<resources>
    <string name="app_name">Clojure Quest</string>
    <string name="MainActivity">activity1</string>
    <string name="MainActivity2">activity2</string>
    <string name="MainActivity3">activity3</string>
    <string name="beforeStructure"></string>
    <string name="afterStructure"></string>
    <string name="answerA"></string>
   <string name="answerB"></string>
    <string name="answerC"></string>
    <string name="answerD"></string>

</resources>
